# mealie-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  claude.yml  docker-publish.yml
docs/: TOOL_REVIEW.md
examples/: librechat.yaml
mealie_mcp/: __init__.py  __main__.py  client.py  config.py  server.py  tools.py
tests/: conftest.py  test_auth_debug.py  test_client.py  test_config.py  test_helpers.py  test_server_http.py  test_tools.py
