[project]
name = "mealie-mcp"
version = "0.1.0"
description = "Read-only FastMCP server exposing a Mealie instance as MCP tools over Streamable HTTP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp==3.4.2",
    "httpx==0.28.1",
    "uvicorn==0.49.0",
]

[project.scripts]
mealie-mcp = "mealie_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mealie_mcp"]
