[project]
name = "mealie-mcp"
version = "0.4.0"
description = "FastMCP server exposing a Mealie instance as MCP tools over Streamable HTTP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Daniel Vejsada" }]
keywords = ["mcp", "mealie", "fastmcp", "recipes", "meal-planning"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp==3.4.4",
    "httpx==0.28.1",
    "uvicorn==0.51.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.22",
    "pyright>=1.1.411",
]

[project.urls]
Homepage = "https://github.com/dvejsada/mealie-mcp"
"Docker Hub" = "https://hub.docker.com/r/georgx22/mealie-mcp"

[project.scripts]
mealie-mcp = "mealie_mcp.server:main"

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mealie_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Allow the intentional broad "tool not found" assertion in tests.
per-file-ignores = { "tests/*" = ["B017"] }

[tool.pyright]
include = ["mealie_mcp"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
